--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #fdf9ff;
+}
+
 .board-window {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  margin-top: 10px;
 }
 
 .grid-container-4 {
@@ -34,6 +44,7 @@
   justify-content: center;
   border-radius: 5px;
   user-select: none;
+  background-color: aliceblue;
 }
 
 .back-card {
@@ -90,6 +101,7 @@
   align-items: center;
   justify-content: center;
   margin: 10px;
+  color: #333;
 }
 
 .timer-icon {
@@ -101,13 +113,23 @@
 
 .user-container {
   position: absolute;
-  left: 20px;
-  top: 20px;
+  left: 3rem;
+  top: 3rem;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-family: "Roboto", sans-serif;
+}
+
+.user-container h3 {
+  margin-left: 15px;
+  font-size: 1.5rem;
+  color: #333;
 }
 
 /* StartScreen.js */
-
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
 .start-screen {
   display: flex;
@@ -119,8 +141,9 @@
 }
 
 .title {
+  margin-top: 100px;
   font-family: "Press Start 2P", system-ui;
-  font-size: 58px;
+  font-size: 60px;
   color: #ff4081;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
@@ -129,7 +152,7 @@
 .choose-board-size {
   margin-bottom: 20px;
   color: #333;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .button-group {
@@ -141,10 +164,10 @@
   background-color: #6200ea;
   color: white;
   border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin: 5px;
-  font-size: 16px;
+  border-radius: 15px;
+  padding: 20px 50px;
+  margin: 10px;
+  font-size: 18px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -165,91 +188,6 @@
   background-color: #b0bec5;
   cursor: not-allowed;
 }
-
-/* LoginPanel.css */
-
-/* .login-panel {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  margin: 0 auto;
-  font-family: Arial, sans-serif;
-}
-
-.login-form {
-  width: 100%;
-}
-
-h2 {
-  margin-bottom: 20px;
-  color: #333;
-  text-align: center;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  color: #555;
-}
-
-input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-sizing: border-box;
-}
-
-.error {
-  color: red;
-  font-size: 12px;
-  margin-top: 5px;
-}
-
-.form-actions {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #6200ea;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #3700b3;
-}
-
-.register-link {
-  margin-top: 10px;
-  text-align: center;
-}
-
-.register-link button {
-  background-color: #03dac5;
-  margin-top: 5px;
-}
-
-.register-link button:hover {
-  background-color: #018786;
-} */
 
 /* LoginPanel.css */
 
@@ -390,4 +328,152 @@ button:hover {
   cursor: pointer;
   text-decoration: underline;
   margin-top: 10px;
+}
+
+/* FinishScreen.js */
+
+.finish-screen-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  height: 80vh;
+  font-family: "Roboto", sans-serif;
+}
+
+.finish-screen-container h2 {
+  font-size: 24px;
+  color: #333;
+  margin: 10px 0;
+}
+
+.finish-screen-buttons {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.finish-screen-buttons button {
+  padding: 10px 20px;
+  margin: 0 5px;
+  background-color: #6200ea;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.finish-screen-buttons button:hover {
+  background-color: #3700b3;
+}
+
+.finish-screen-buttons button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(98, 0, 234, 0.4);
+}
+
+.finish-screen-buttons .leaderboard-button {
+  background-color: #03dac5;
+}
+
+.finish-screen-buttons .leaderboard-button:hover {
+  background-color: #018786;
+}
+
+/* Leaderboard.js */
+
+.leaderboard-container {
+  position: relative;
+  padding-top: 160px;
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
+}
+
+.leaderboard-header {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 500px;
+  text-align: center;
+  background-color: #fff;
+  padding: 10px 20px;
+  z-index: 10;
+  font-size: 40px;
+}
+
+.leaderboard-buttons {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-around;
+  background-color: #fff;
+  padding: 10px 20px;
+  z-index: 9;
+}
+
+.leaderboard-buttons button {
+  padding: 10px 20px;
+  margin: 6px;
+  background-color: #6200ea;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 16px;
+}
+
+.leaderboard-buttons button:hover {
+  background-color: #3700b3;
+}
+
+.leaderboard-buttons button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(98, 0, 234, 0.4);
+}
+
+.leaderboard-form {
+  position: fixed;
+  top: 70px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-around;
+  background-color: #fff;
+  padding: 10px 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+}
+
+.leaderboard-form label {
+  margin: 0 10px;
+}
+
+.leaderboard-form input,
+.leaderboard-form select {
+  padding: 5px;
+  font-size: 14px;
+}
+
+.leaderboard-scores {
+  margin-top: -40px;
+  max-height: calc(95vh - 160px);
+  overflow-y: auto;
+  padding: 20px;
+}
+
+.leaderboard-scores li {
+  margin: 10px 0;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
